discussion/kv_engine/128640/128640_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Move server_stats to StatCollector interface

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-24 14:50:12.000000000
Message: 
Uploaded patch set 11: Patch Set 10 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-24 15:43:36.000000000
Message: 
Patch Set 11: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24799/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24799/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2974/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: use of undeclared identifier "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:36: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:38: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:40: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:41: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                        ^
                                        ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2974/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2974/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1480/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
